--- a/index.html
+++ b/index.html
@@ -131,7 +131,6 @@
                 alt="Mark Guerrero"
                 width="264"
                 height="260"
-                class="picture"
               />
               <div class="emplyee">
                 <h3 class="card-content-name">Mark Guerrero</h3>
@@ -176,7 +175,6 @@
                 alt="Tom Ford"
                 width="264"
                 height="260"
-                class="picture"
               />
               <div class="emplyee">
                 <h3 class="card-content-name">Tom Ford</h3>
@@ -219,7 +217,6 @@
                 alt="Camila Garcia"
                 width="264"
                 height="260"
-                class="picture"
               />
               <div class="emplyee">
                 <h3 class="card-content-name">Camila Garcia</h3>
@@ -262,7 +259,6 @@
                 alt="Daniel Wilson"
                 width="264"
                 height="260"
-                class="picture"
               />
               <div class="emplyee">
                 <h3 class="card-content-name">Daniel Wilson</h3>
@@ -313,27 +309,28 @@
                 alt="banking-app-mokeup"
                 width="360"
                 height="300"
-                class="picture"
               />
               <div class="portfolio-wrap">
                 <h3 class="section-four-mokeup-description">Banking App</h3>
                 <p class="card-content-profesion">App</p>
               </div>
             </li>
-            <li class="li-our-portfolio">
-              <img
-                src="./images/img-6.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-                class="picture"
-              />
-              <div class="portfolio-wrap">
-                <h3 class="section-four-mokeup-description">
-                  Cashless Payment
-                </h3>
-                <p class="card-content-profesion">Marketing</p>
-              </div>
+            <div class="tumba">
+              <li class="li-our-portfolio">
+                <img
+                  src="./images/img-6.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="new-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <div class="portfolio-wrap">
+                  <h3 class="section-four-mokeup-description">
+                    Cashless Payment
+                  </h3>
+                  <p class="card-content-profesion">Marketing</p>
+                </div>
+            </div>
             </li>
             <li class="li-our-portfolio">
               <img
@@ -341,7 +338,6 @@
                 alt="meditation app mokeup"
                 width="360"
                 height="300"
-                class="picture"
               />
               <div class="portfolio-wrap">
                 <h3 class="section-four-mokeup-description">Meditation App</h3>
@@ -355,7 +351,6 @@
                 alt="Taxi Service"
                 width="360"
                 height="300"
-                class="picture"
               />
               <div class="portfolio-wrap">
                 <h3 class="section-four-mokeup-description">Taxi Service</h3>
@@ -368,7 +363,6 @@
                 alt="Screen Illustrations"
                 width="360"
                 height="300"
-                class="picture"
               />
               <div class="portfolio-wrap">
                 <h3 class="section-four-mokeup-description">
@@ -383,7 +377,6 @@
                 alt="Online Courses"
                 width="360"
                 height="300"
-                class="picture"
               />
               <div class="portfolio-wrap">
                 <h3 class="section-four-mokeup-description">Online Courses</h3>
