--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
             </div>
             <div class="thumba">
               <li class="li-our-portfolio">
-               <div class="image-color-wrapper">
+               <div class="double-items-wrap">
                   <img
                     src="./images/img-6.jpg"
                     alt="Cashless Payment"
@@ -374,7 +374,7 @@
            
 
               <li class="li-our-portfolio">
-               <dov class="double-items-wrap">
+               <div class="double-items-wrap">
                   <img
                     src="./images/img-8.jpg"
                     alt="Taxi Service"
@@ -386,7 +386,7 @@
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                     · Cloud Storage App
                   </p>
-               </dov>
+               </div>
                 <div class="portfolio-wrap">
                   <h3 class="section-four-mokeup-description">Taxi Service</h3>
                   <p class="card-content-profesion">Marketing</p>
