--- a/index.html
+++ b/index.html
@@ -454,6 +454,36 @@
       <svg class="" width="" height="">
         <use href=""></use>
       </svg>
+      <ul class="ul-list">
+                  <li class="li-social-media">
+                    <a href="" target="_blank" class="social-link">
+                      <svg class="icon-social-media" width="24" height="24">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="li-social-media">
+                    <a href="" target="_blank" class="social-link">
+                      <svg class="icon-social-media" width="24" height="24">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="li-social-media">
+                    <a href="" target="_blank" class="social-link">
+                      <svg class="icon-social-media" width="24" height="24">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="li-social-media">
+                    <a href="" target="_blank" class="social-link">
+                      <svg class="icon-social-media" width="24" height="24">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
     </footer>
   </body>
 </html>
