--- a/index.html
+++ b/index.html
@@ -445,37 +445,39 @@
       <svg class="" width="" height="">
         <use href=""></use>
       </svg>
-      <p class="social-media-footer">Social media</p>
-      <ul class="ul-list">
-        <li class="li-social-media">
-          <a href="" target="_blank" class="social-link">
-            <svg class="icon-social-media" width="24" height="24">
-              <use href="./images/icons.svg#icon-instagram"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="li-social-media">
-          <a href="" target="_blank" class="social-link">
-            <svg class="icon-social-media" width="24" height="24">
-              <use href="./images/icons.svg#icon-twitter"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="li-social-media">
-          <a href="" target="_blank" class="social-link">
-            <svg class="icon-social-media" width="24" height="24">
-              <use href="./images/icons.svg#icon-facebook"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="li-social-media">
-          <a href="" target="_blank" class="social-link">
-            <svg class="icon-social-media" width="24" height="24">
-              <use href="./images/icons.svg#icon-linkedin"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
+      <div class="container">
+        <p class="social-media-footer">Social media</p>
+        <ul class="ul-list">
+          <li class="li-social-media">
+            <a href="" target="_blank" class="social-link">
+              <svg class="icon-social-media" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="li-social-media">
+            <a href="" target="_blank" class="social-link">
+              <svg class="icon-social-media" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="li-social-media">
+            <a href="" target="_blank" class="social-link">
+              <svg class="icon-social-media" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="li-social-media">
+            <a href="" target="_blank" class="social-link">
+              <svg class="icon-social-media" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
