--- a/index.html
+++ b/index.html
@@ -431,53 +431,54 @@
         <!-- </div> -->
       </section>
     </main>
-
-    <footer class="footer-section">
-      <div class="container">
-        <a href="./index.html" class="footer-web"
-          >Web<span class="footer-studio">Studio</span></a
-        >
-        <p class="footer-descripton">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
-      <svg class="" width="" height="">
-        <use href=""></use>
-      </svg>
-      <div class="container">
-        <p class="social-media-footer">Social media</p>
-        <ul class="ul-list">
-          <li class="li-social-media">
-            <a href="" target="_blank" class="social-link">
-              <svg class="icon-social-media" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="li-social-media">
-            <a href="" target="_blank" class="social-link">
-              <svg class="icon-social-media" width="24" height="24">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="li-social-media">
-            <a href="" target="_blank" class="social-link">
-              <svg class="icon-social-media" width="24" height="24">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="li-social-media">
-            <a href="" target="_blank" class="social-link">
-              <svg class="icon-social-media" width="24" height="24">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </footer>
+    <div class="container-two">
+      <footer class="footer-section">
+        <div class="container">
+          <a href="./index.html" class="footer-web"
+            >Web<span class="footer-studio">Studio</span></a
+          >
+          <p class="footer-descripton">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <svg class="" width="" height="">
+          <use href=""></use>
+        </svg>
+        <div class="">
+          <p class="social-media-footer">Social media</p>
+          <ul class="ul-list">
+            <li class="li-social-media">
+              <a href="" target="_blank" class="social-link">
+                <svg class="icon-social-media" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="li-social-media">
+              <a href="" target="_blank" class="social-link">
+                <svg class="icon-social-media" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="li-social-media">
+              <a href="" target="_blank" class="social-link">
+                <svg class="icon-social-media" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="li-social-media">
+              <a href="" target="_blank" class="social-link">
+                <svg class="icon-social-media" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
