--- a/index.html
+++ b/index.html
@@ -453,21 +453,21 @@
               </a>
             </li>
             <li class="li-social-media">
-              <a href="" target="_blank" class="social-link">
+              <a href="" target="_blank" class="social-link-footer">
                 <svg class="icon-social-media-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="li-social-media">
-              <a href="" target="_blank" class="social-link">
+              <a href="" target="_blank" class="social-link-footer">
                 <svg class="icon-social-media-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="li-social-media">
-              <a href="" target="_blank" class="social-link">
+              <a href="" target="_blank" class="social-link-footer">
                 <svg class="icon-social-media-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
