--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
         <div class="container-for-icons">
           <p class="social-media-footer">Social media</p>
           <ul class="ul-list-footer">
-            <li class="li-social-media-footer">
+            <li class="li-social-media">
               <a href="" target="_blank" class="social-link-footer">
                 <svg class="icon-social-media-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
